# ProcessGuard

./: .gitignore  APP_DESCRIPTION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  RELEASE_NOTES_1.0.2.md  SECURITY.md  build-installer.ps1  build.rs  prepare-release.ps1
docs/: USAGE.md
installer/: GETTING_STARTED.txt  INSTALLER_GUIDE.txt  ProcessGuard.installed  ProcessGuard.iss
src/: main.rs
